# tesis_01

./: 01_etl.ipynb  02_EDA.ipynb  README.md  pyproject.toml  scopus.bib
